--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3307/name_list
+spring.datasource.url=jdbc:mysql://localhost:3307/novelist
 spring.datasource.username=user
 spring.datasource.password=password
